# tiqets

./: Dockerfile  README.md  create_db.sh  docker-compose.yml  pyproject.toml  run.sh  test.sh
tests/: conftest.py  test_data_access.py  test_extract.py  test_load.py  test_tiqets.py
tests/data/: test_barcodes.csv  test_barcodes_duplicate.csv  test_no_barcodes_orders.csv  test_orders.csv  test_orders_multiple.csv
tiqets/: config.py  data_access.py  decorators.py  extract.py  load.py  main.py  models.py
