[tool.poetry]
name = "tiqets"
version = "0.1.0"
description = ""
authors = ["Artsiom Kushniarou <artsiom.kushniarou@meridianlink.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pynvim = "^0.4.3"
ipython = "^8.4.0"
isort = "^5.10.1"
black = "^22.3.0"
factory-boy = "^3.2.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
